
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

nuttx_add_library(c)

set(SRCS)

#add_subdirectory(aio)
add_subdirectory(audio)
add_subdirectory(assert)
#add_subdirectory(bin)
add_subdirectory(builtin)
add_subdirectory(ctype)
add_subdirectory(dirent)
#add_subdirectory(dllfcn)
add_subdirectory(endian)
add_subdirectory(errno)
add_subdirectory(fixedmath)
#add_subdirectory(hex2bin)
add_subdirectory(inttypes)
#add_subdirectory(kbin)
add_subdirectory(libgen)
#add_subdirectory(locale)
#add_subdirectory(lzf)
add_subdirectory(machine)
#add_subdirectory(math)
add_subdirectory(misc)
add_subdirectory(modlib)
add_subdirectory(net)
add_subdirectory(netdb)
add_subdirectory(pthread)
add_subdirectory(queue)
add_subdirectory(sched)
add_subdirectory(semaphore)
add_subdirectory(signal)
add_subdirectory(spawn)
add_subdirectory(stdio)
add_subdirectory(stdlib)
add_subdirectory(string)
add_subdirectory(symtab)
add_subdirectory(syslog)
add_subdirectory(termios)
add_subdirectory(time)
add_subdirectory(tls)
#add_subdirectory(ubin)
add_subdirectory(uio)
add_subdirectory(unistd)
#add_subdirectory(userfs)
#add_subdirectory(wchar)
#add_subdirectory(wctype)
#add_subdirectory(wqueue)
#add_subdirectory(zoneinfo)

target_sources(c PRIVATE ${SRCS})

target_include_directories(c INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
