nuttx_add_kernel_library(c SPLIT)

target_include_directories(c PRIVATE ${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(aio)
add_subdirectory(assert)
add_subdirectory(audio)
add_subdirectory(bin)
add_subdirectory(builtin)
add_subdirectory(ctype)
add_subdirectory(dirent)
add_subdirectory(dlfcn)
add_subdirectory(errno)
add_subdirectory(eventfd)
add_subdirectory(fixedmath)
add_subdirectory(grp)
add_subdirectory(hex2bin)
add_subdirectory(inttypes)
add_subdirectory(kbin)
add_subdirectory(libgen)
add_subdirectory(locale)
add_subdirectory(lzf)
add_subdirectory(machine)
add_subdirectory(math)
add_subdirectory(misc)
add_subdirectory(modlib)
add_subdirectory(net)
add_subdirectory(netdb)
add_subdirectory(pthread)
add_subdirectory(pwd)
add_subdirectory(queue)
add_subdirectory(sched)
add_subdirectory(semaphore)
add_subdirectory(signal)
add_subdirectory(spawn)
add_subdirectory(stdio)
add_subdirectory(stdlib)
add_subdirectory(string)
add_subdirectory(symtab)
add_subdirectory(syslog)
add_subdirectory(termios)
add_subdirectory(time)
add_subdirectory(tls)
add_subdirectory(uio)
add_subdirectory(unistd)
add_subdirectory(userfs)
add_subdirectory(uuid)
add_subdirectory(wchar)
add_subdirectory(wctype)
add_subdirectory(wqueue)
add_subdirectory(zoneinfo)
add_subdirectory(stream)
